[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/game_manager.gd" type="Script" id=1]
[ext_resource path="res://sounds/complete_level.mp3" type="AudioStream" id=2]

[node name="GameManager" type="Node2D"]
script = ExtResource( 1 )

[node name="EndGameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="EndGameAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="EndGameTimer" to="." method="_on_EndGameTimer_timeout"]
